# Adaptive-grid-generation

./: .gitignore  CMakeLists.txt  README.md
app/: gridgen.cpp  isosurfacing.cpp
cmake/: Eigen3.cmake  FindGUROBI.cmake  cli11.cmake  convex_hull_membership.cmake  implicit_functions.cmake  mtet.cmake  nlohmann-json.cmake  smallvector.cmake  unordered_dense.cmake
data/: config.json
data/BSH/cleats/: cleats.xyz  cleats_coeff  config.json  grid_1.json
data/BSH/doghead_800/: config.json  doghead_800.xyz  doghead_800_coeff  grid_1.json
data/BSH/doghead_800_rotate/: config.json  doghead_800_int_tree.json  doghead_800_shifted_coeff  grid_1.json
data/BSH/doghead_800_shifted/: doghead_800_shifted.xyz  grid_1.json
data/BSH/figure1/(b)/input/: 1.xyz  10_sample.xyz  11_sample.xyz  12.xyz  12_rbfCoeff  12_sample.xyz  13.xyz  13_rbfCoeff  13_sample.xyz  1_rbfCoeff  1_sample.xyz  2_sample.xyz  3.xyz  3_rbfCoeff  3_sample.xyz  4_sample.xyz  5_sample.xyz  6.xyz  6_rbfCoeff  6_sample.xyz  7_sample.xyz  8.xyz  8_rbfCoeff  8_sample.xyz  9_sample.xyz  config.json  config_1func.json  grid_1.json
data/BSH/planck_1011/: config.json
data/CSG/: 10-wikiBall-tree.json  9-mechParts-tree.json  9-mechParts.json
data/CSG_examples_1/: csg_examples_1.json  csg_examples_1_test.json  csg_examples_1_tree.json
data/CSG_examples_2/: csg_examples_2.json  csg_examples_2_tree.json
data/Figure1/: 10-wikiBall.json  fig1a.bat  fig1a.sh  fig1b.bat  fig1b.sh
data/Figure10/: 2-cylSphere.json  fig10d.bat  fig10d.sh  grid_1.json
data/Figure11/: 3-cylinder.json  fig11b.bat  fig11b.sh  grid_1.json
data/Figure13/: fig13b.bat  fig13b.sh  figure13.json
data/Figure14/: fig14b.bat  fig14b.sh  figure14.json  figure14_tree.json  trans_sphere.json
data/Figure15/: fig15.bat  fig15.sh  figure15.json
data/Figure18/: fig18.bat  fig18.sh
data/Figure19/: fig19.bat  fig19.sh  grid_1.json  key.json
data/Figure2/: fig2d.bat  fig2d.sh  figure2.json
data/Figure20/: fig20a.bat  fig20a.sh  grid_1.json
data/Figure21/: csg_examples_3.json  csg_examples_3_tree.json  fig21a.bat  fig21a.sh
data/Figure22/: config.json  doghead_800_int_tree.json  fig22a.bat  fig22a.sh  fig22b.bat  fig22b.sh
data/HRBF/doghead_800/: doghead_800.xyz  doghead_800_shifted.xyz  doghead_800_tree.json
data/HRBF/doghead_800_shifted/: doghead_800_shifted_coeff
data/HRBF/planck_1011/: grid_1.json  planck_1011.xyz  planck_1011_coeff
data/circles_MI/: circles_MI.json
data/function/: 18-sphere.json  cyl3.json  cylSphere.json  sphere.json
data/function_examples/: 1-Gaussian.json  1-cyclide.json  1-cylinder.json  1-smile.json  1-sphere-flat.json  1-sphere.json  1-wave.json  18-sphere.json  18-sphere_copy.json  2-close-sphere.json  2-concentric.json  2-cylSphere.json  2-sphere.json  3-sphere.json
data/grid/: cube61.msh  tet.msh
data/lines_MI/: grid_1.json  lines_MI.json
data/mesh/: bar.json  cube6.json  cube6.msh  tet5_grid_10k.json
data/shader/: cables_MI_2.json  cube.json  grid.json  grid_1.json  grid_2.json  grid_level_16.json  grid_level_32.json  grid_level_4.json  grid_level_64.json  grid_level_8.json  grid_test.json  shaders.json  single_cable.json  single_key.json  single_small_key.json
data/torus_test/: grid_4.json  grid_8.json  thin_torus_test.json  torus_test.json
include/: grid_mesh.h  subdivide_multi.h  tet_quality.h  timer.h
src/: adaptive_grid_gen.h  csg.cpp  csg.h  csg.hpp  grid_mesh.h  grid_refine.cpp  grid_refine.h  io.cpp  io.h  refine_crit.cpp  refine_crit.h  subdivide_criteria.h  subdivide_multi.cpp  subdivide_multi.h  tet_quality.cpp  tet_quality.h  timer.cpp  timer.h
tests/: test_grid_gen.cpp
